3.N.N  - NN.XXX-2013
====================
- Changed the source from where the memory usage is collected in the 'squid'
  graph. Now the values shown are more real and accurate.
- Added user/password authentication option in the built-in HTTP server. [#14]
- Added the script 'htpasswd.pl' to be able to encrypt passwords. [#14]
- Fixed a bug that prevented seeing the Core temperatures in the 'lmsens' graph.
	(thanks to Bryan Guidroz, bryanguidroz AT hotmail.com for pointing this out)


3.2.0  - 13-May-2013
====================
- Added a complete Raspberry Pi sensors graph. [#10, #13]
	(thanks to graysky, graysky AT archlinux.us)
- Improved a bit the MySQL documentation in the monitorix.conf(5) man page.
	(thanks to Luca Ferrario, luca AT ferrario.net)
- Added a new option called 'temperature_scale' to be able to toggle between
  values in Celsius or in Fahrenheit.
	(suggested by Bryan Guidroz, bryanguidroz AT hotmail.com)
- Added support for Simplified Chinese language in the monthly reports.
	(thanks to Christopher Meng, rpm AT cicku.me)
- Added support for the ATI graph cards through the 'gpu' keys in the 'lmsens'
  graph. As in the NVIDIA case, it requires the ATI official drivers. [#8]
- Changed the default charset in the built-in HTTP server to UTF-8.
	(thanks to Akong, ak6783 AT gmail.com for pointing this out)
- Added verbosity to the 'undefined configuration' of MySQL graph.
- Fixed a typo in an iptables rule in the Nginx graph.
	(thanks to Faustin Lammler, faustin AT dejadejoder.com)
- Fixed the Squid graph in order to honour the 'netstat_in_bps' option.
	(suggested to Ignacio Freyre, nachofw AT adinet.com.uy)
- Fixed in 'port' graph to show the minimum number of graphs between the value
  of 'max' and the number of ports really defined. This fixes the error messages
  of uninitialized values in lines 410 and 411.
- Fixed to honour the support of RAID controller parameters in the disk device
  names defined in the disk graph. [#12]