@@ -20,6 +20,7 @@ base_cgi = /monitorix-cgi
 
 <httpd_builtin>
 	enabled = y
+	host =
 	port = 8080
 	user = nobody
 	group = nobody
